<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--    일기 스크롤 뷰    -->
    <ScrollView
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--    스티커 뷰 / 일기 작성 칸 -->
            <com.example.opensource2023.sticker.StickerView
                android:id="@+id/StickerView"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/DiaryTitle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/DiaryWrite"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:gravity="top"
                        android:inputType="none"
                        android:justificationMode="inter_word"
                        android:minLines="15"
                        android:privateImeOptions="defaultInputmode=korean"
                        android:scrollbars="vertical" />
                </LinearLayout>
            </com.example.opensource2023.sticker.StickerView>

            <EditText
                android:id="@+id/DiaryTitle"
                android:layout_width="270dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:hint="Title"
                app:layout_constraintBottom_toTopOf="@+id/StickerView"
                app:layout_constraintStart_toEndOf="@+id/Day"
                app:layout_constraintTop_toBottomOf="@+id/Year" />

            <TextView
                android:id="@+id/Month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/month"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/Year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:textSize="25sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Month"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:text="22"
                android:textSize="35sp"
                app:layout_constraintBottom_toTopOf="@+id/StickerView"
                app:layout_constraintStart_toStartOf="@+id/StickerView"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/Day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="WED"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/Date"
                app:layout_constraintStart_toEndOf="@+id/Date"
                tools:ignore="MissingConstraints" />

            <ImageButton
                android:id="@+id/DiaryCheckButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:background="#00000000"
                android:contentDescription="@string/save_button"
                android:src="@drawable/baseline_check_24"
                app:layout_constraintBottom_toBottomOf="@+id/Month"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints" />

            <ImageButton
                android:id="@+id/DiaryClearButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:background="#00000000"
                android:contentDescription="@string/back_button"
                android:src="@drawable/baseline_clear_24"
                app:layout_constraintBottom_toBottomOf="@+id/Month"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <ImageButton
                android:id="@+id/GptResponseButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="50dp"
                android:background="#00000000"
                android:contentDescription="@string/gpt_button"
                android:scaleType="centerInside"
                android:src="@drawable/gpt_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/StickerView" />

            <ImageView
                android:id="@+id/GptTitleImage"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/gpt_logo"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/StickerView"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/GptTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="Today's Comment"
                android:textSize="20dp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/GptTitleImage"
                app:layout_constraintStart_toEndOf="@+id/GptTitleImage"
                app:layout_constraintTop_toTopOf="@+id/GptTitleImage"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/GPTResponseTextView"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="top"
                android:justificationMode="inter_word"
                android:minLines="1"
                android:text="GPT Response will appear here"
                android:textSize="17dp"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@+id/GptTitleImage"
                app:layout_constraintTop_toBottomOf="@+id/GptTitleImage" />

            <View
                android:id="@+id/myline"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="35dp"
                android:background="#A9A9A9"
                app:layout_constraintBottom_toTopOf="@+id/YoutubeResponseButton" />

            <ImageButton
                android:id="@+id/YoutubeResponseButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="70dp"
                android:background="@drawable/youtube_button_background"
                android:contentDescription="@string/youtube_button"
                android:scaleType="centerInside"
                android:src="@drawable/youtube_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/GPTResponseTextView" />

            <ImageView
                android:id="@+id/YoutubeTitleImage"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/youtube_button_background"
                android:src="@drawable/youtube_logo"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/myline"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/YoutubeTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="Today's Song"
                android:textSize="20dp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/YoutubeTitleImage"
                app:layout_constraintStart_toEndOf="@+id/YoutubeTitleImage"
                app:layout_constraintTop_toTopOf="@+id/YoutubeTitleImage" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="40dp"
                android:background="#A9A9A9"
                app:layout_constraintTop_toBottomOf="@+id/YoutubeResponseButton"
                tools:layout_editor_absoluteX="10dp" />

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/YoutubePlayerView"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/YoutubeTitleImage" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <!--    이모지 선택 뷰    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical"
        >

        <ImageButton
            android:id="@+id/StickerViewButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/baseline_arrow_drop_up_24_background"
            android:src="@drawable/baseline_arrow_drop_up_24"/>


        <HorizontalScrollView
            android:id="@+id/StickerSelectView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/baseline_arrow_drop_up_24_background"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <GridView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/HorizontalGridView"
                    android:layout_gravity="center"
                    />
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>

</LinearLayout>
